# Vanta

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codex_update.md  example_code.txt
.github/workflows/: ci.yml
examples/: classes.vt  exceptions.vt  fibonacci.vt
src/: ast.h  cli.cpp  cli.h  debug_output.cpp  debug_output.h  diagnostic.cpp  diagnostic.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  source_file.cpp  source_file.h  token.h  value.cpp  value.h
tests/: test_cli.cpp  test_evaluator.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_runtime.cpp  test_source_file.cpp
tests/programs/: cli_success.vt
